--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ requests==2.25.1
 google-api-python-client
 google-auth
 google-auth-oauthlib
+Werkzeug==1.0.1
 google-auth-httplib2
 # Add other dependencies as needed
