--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
- 
 Flask==2.0.1
 Werkzeug==2.0.1
 requests==2.25.1
@@ -6,5 +5,5 @@ google-api-python-client==2.10.0
 google-auth==1.30.0
 google-auth-oauthlib==0.4.4
 google-auth-httplib2==0.1.0
-google-generativeai  # Make sure this is the correct package name
-flask_pymongo==2.3.0
+google-generativeai==0.1.0  # Replace with the correct version if known
+grpcio==1.42.0  # Ensure the version matches your project requirements
