--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ google-api-python-client==2.10.0
 google-auth==1.30.0
 google-auth-oauthlib==0.4.4
 google-auth-httplib2==0.1.0
-google-generativeai==0.1.0  # Replace with the correct version if known
+# Replace with the correct version if known
 grpcio==1.42.0  # Ensure the version matches your project requirements
